New function get_catchment_size() and normalize option for plots (integrated response equals for 1 for 1 unit of rainfall, i.e., making it independent from catchment size)

--- a/Time-area-diagram.ipynb
+++ b/Time-area-diagram.ipynb
@@ -181,12 +181,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_catchment_size(flowdir):\n",
+    "    '''Returns the catchment size from flow direction map\n",
+    "       \n",
+    "       arguments:\n",
+    "       flowdir: array of flow direction (2d map)\n",
+    "       \n",
+    "       returns:\n",
+    "       catchment size (number of cells) (float)\n",
+    "    \n",
+    "    '''\n",
+    "    return np.count_nonzero(flowdir)\n",
+    "\n",
     "def simulation(flowdir, rainfall=[1], max_it = 20, verbose=True):\n",
     "    ''' This function looks for the outlet, prepares and runs the simulation,\n",
     "        returns list of outflow values and list of maps\n",
     "        \n",
     "        arguments:\n",
-    "        flowdir: array of flow direction\n",
+    "        flowdir: array of flow direction (2d map)\n",
     "        rainfall: time series of rainfall input (list)\n",
     "        max_it: maximum number of iterations (increase if results are incomplete)\n",
     "        verbose: prints messages to the screen\n",
@@ -196,8 +208,7 @@
     "        list_arrays: set of array which represent the runoff for each time step\n",
     "                     in each cell\n",
     "        '''\n",
-    "    # get catchment size\n",
-    "    size = np.count_nonzero(flowdir)\n",
+    "    size = get_catchment_size(flowdir)\n",
     "    if verbose:\n",
     "        print('Catchment size = %i grid cells...' % size)\n",
     "    # find outlet\n",
@@ -254,7 +265,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_results(flowdir, list_outflow, list_arrays, j, rainfall=None, filename=None, plot_lines=None):\n",
+    "def plot_results(flowdir, list_outflow, list_arrays, j, rainfall=None, \n",
+    "                 filename=None, plot_lines=None, normalize=False):\n",
     "    ''' Function to visualize the simulations results\n",
     "    \n",
     "        arguments:\n",
@@ -267,6 +279,7 @@
     "        rainfall: list of rainfall (optional time series)\n",
     "        filename: target file to save plot (optional)\n",
     "        plot_lines: optional argument for line plotting (list including 2 lists, x and y)\n",
+    "        normalize: whether to normalize output time series (i.e., sum equals 1) (bool)\n",
     "    '''\n",
     "    # create mesh grids which include row / col numbers, respectively\n",
     "    rr,cc = np.meshgrid(np.arange(flowdir.shape[0]),np.arange(flowdir.shape[1]), indexing='ij')\n",
@@ -309,15 +322,21 @@
     "    ax.set_title('t=%i, Runoff=%.1f' % (j, list_outflow[j]))\n",
     "    plt.grid(which='minor', linestyle=':',zorder=0)\n",
     "\n",
-    "\n",
+    "    if normalize:\n",
+    "        c = 1. / get_catchment_size(flowdir)\n",
+    "        ystr = ' (Normalized)'\n",
+    "    else:\n",
+    "        c = 1.\n",
+    "        ystr = ''\n",
+    "    maxy = np.max(outflows)*1.2*c\n",
     "    ax2 = plt.subplot2grid((6,15), (0,9), colspan=6, rowspan=2)\n",
     "    ax2.set_xlim(0,len(outflows))\n",
-    "    ax2.set_ylim(0,np.max(outflows)*1.2)\n",
+    "    ax2.set_ylim(0,maxy)\n",
     "    ax2.set_xlabel('Time')\n",
-    "    ax2.set_ylabel('Runoff')\n",
+    "    ax2.set_ylabel('Runoff'+ystr)\n",
     "    ax2.set_title('Runoff time series')\n",
     "    plt.grid('on', linestyle=':')\n",
-    "    ax2.plot(np.arange(0,j+1),outflows[0:j+1])\n",
+    "    ax2.plot(np.arange(0,j+1),outflows[0:j+1]*c)\n",
     "    if rainfall is not None:\n",
     "        ax21 = ax2.twinx()\n",
     "        ax21.bar(np.arange(0,len(rainfall))[0:j+1], rainfall[0:j+1], \n",
