Bugs fixed: normalize now also affects maps, display error in plotting vectors fixed

--- a/Time-area-diagram.ipynb
+++ b/Time-area-diagram.ipynb
@@ -289,6 +289,12 @@
     "    # plotting\n",
     "    outflows = np.array(list_outflow)\n",
     "\n",
+    "    if normalize:\n",
+    "        c = 1. / get_catchment_size(flowdir)\n",
+    "        ystr = ' (Normalized)'\n",
+    "    else:\n",
+    "        c = 1.\n",
+    "        ystr = ''\n",
     "\n",
     "    array = copy.deepcopy(list_arrays[j])\n",
     "    invalid = array==0.\n",
@@ -303,14 +309,13 @@
     "    fig = plt.figure(figsize=(9,4))\n",
     "    gridspec.GridSpec(6,15)\n",
     "    ax = plt.subplot2grid((6,15), (0,0), colspan=6, rowspan=6)\n",
-    "    #ax = plt.axes(xlim=(-0.5,flowdir.shape[1]-0.5), ylim=(flowdir.shape[0]-0.5,-0.5))\n",
     "    ep = patches.Rectangle((-0.5,-0.5), flowdir.shape[1], flowdir.shape[0], \n",
     "                           color='#f0f0f0', hatch='//', fill=None, zorder=-10)\n",
     "    ax.add_patch(ep)\n",
     "    cmapw = colors.ListedColormap(['white'])\n",
     "    im0=ax.imshow(mask,cmap=cmapw)\n",
-    "    im=ax.imshow(array, vmin=0, vmax=np.max(outflows), cmap=plt.get_cmap('Blues'))\n",
-    "    if np.abs(np.nansum(vx2)) > 0 or np.abs(np.nansum(vy2))>0:\n",
+    "    im=ax.imshow(array*c, vmin=0, vmax=np.max(outflows*c), cmap=plt.get_cmap('Blues'))\n",
+    "    if np.count_nonzero(~np.isnan(vx2)) > 1 or np.count_nonzero(~np.isnan(vy2)) > 1:\n",
     "        ax.quiver(cc,rr,vx2,-vy2,zorder=3)\n",
     "    fig.colorbar(im, ax=ax, orientation='vertical', shrink=0.75)\n",
     "    ax.set_xlabel('x')\n",
@@ -322,12 +327,6 @@
     "    ax.set_title('t=%i, Runoff=%.1f' % (j, list_outflow[j]))\n",
     "    plt.grid(which='minor', linestyle=':',zorder=0)\n",
     "\n",
-    "    if normalize:\n",
-    "        c = 1. / get_catchment_size(flowdir)\n",
-    "        ystr = ' (Normalized)'\n",
-    "    else:\n",
-    "        c = 1.\n",
-    "        ystr = ''\n",
     "    maxy = np.max(outflows)*1.2*c\n",
     "    ax2 = plt.subplot2grid((6,15), (0,9), colspan=6, rowspan=2)\n",
     "    ax2.set_xlim(0,len(outflows))\n",
