Cleanup, comments added, variable fps rate for animated gif export

--- a/Time-area-diagram.ipynb
+++ b/Time-area-diagram.ipynb
@@ -270,13 +270,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# the following 3 lines are needed only in case you plan to include the animations as\n",
+    "# videos in the jupyter notebook\n",
     "ffmpeg = '/Users/kristianfoerster/Documents/ffmpeg'\n",
     "plt.rcParams['animation.ffmpeg_path'] = ffmpeg\n",
     "save_anim = os.path.exists(ffmpeg)\n",
     "\n",
     "def animation(flowdir, list_outflow, list_arrays, rainfall=None, \n",
     "              plot_lines=None, normalize=False, interval=250,\n",
-    "              to_file=None):\n",
+    "              to_file=None, fps_gif = 1):\n",
     "    ''' Function to visualize the simulations results\n",
     "    \n",
     "        arguments:\n",
@@ -290,8 +292,19 @@
     "        normalize: whether to normalize output time series (i.e., sum equals 1) (bool)\n",
     "        interval: milliseconds between frames\n",
     "        to_file: optional file name (animated gif output)\n",
+    "        fps_gif: frames per second in animated gif file (to_file)\n",
+    "        \n",
+    "        returns animation object\n",
     "    '''\n",
     "    def animate(j):\n",
+    "        ''' internal function that redraws the elements each iteration\n",
+    "        \n",
+    "            arguments:\n",
+    "            j: integer variable indicating the number of the frame to be plotted\n",
+    "            \n",
+    "            returns updated line art objects\n",
+    "        '''\n",
+    "        # retrieve relevant information for frame j\n",
     "        array = copy.deepcopy(list_arrays[j])\n",
     "        invalid = array==0.\n",
     "        vx2 = copy.deepcopy(vx)\n",
@@ -317,7 +330,8 @@
     "        ax.set_title('t=%i, Runoff=%.1f' % (j, list_outflow[j]))\n",
     "        del array,vx2,vy2\n",
     "        return im,Q,bar_rain,\n",
-    "        \n",
+    "    \n",
+    "    # create figure\n",
     "    fig = plt.figure(figsize=(8,3.5))\n",
     "    gridspec.GridSpec(6,15)\n",
     "\n",
@@ -347,6 +361,7 @@
     "        c = 1.\n",
     "        ystr = ''\n",
     "\n",
+    "    # flow map\n",
     "    ax = plt.subplot2grid((6,15), (0,0), colspan=6, rowspan=6)\n",
     "    ep = patches.Rectangle((-0.5,-0.5), flowdir.shape[1], flowdir.shape[0], \n",
     "                           color='#f0f0f0', hatch='//', fill=None, zorder=-10)\n",
@@ -366,6 +381,7 @@
     "    \n",
     "    plt.grid(which='minor', linestyle=':',zorder=0)\n",
     "\n",
+    "    # time series\n",
     "    maxy = np.max(outflows)*1.2*c\n",
     "    ax2 = plt.subplot2grid((6,15), (0,9), colspan=6, rowspan=2)\n",
     "    ax2.set_xlim(0,len(outflows))\n",
@@ -388,26 +404,20 @@
     "        if len(plot_lines)==2:\n",
     "            ax.plot(plot_lines[0], plot_lines[1], '-r')        \n",
     "        \n",
-    "    #plt.tight_layout()\n",
     "    del array,vx2,vy2\n",
-    "        \n",
+    "    \n",
+    "    # call animation function\n",
     "    anim = FuncAnimation(fig, animate, frames=len(list_outflow), interval=interval, blit=True)\n",
+    "    \n",
+    "    # organize exports (embedded video and / or animated gif)\n",
     "    if 'save_anim' in globals():\n",
     "        if save_anim:\n",
     "            video = anim.to_html5_video()\n",
     "            html = display.HTML(video)\n",
     "            display.display(html)\n",
     "            plt.close()\n",
-    "#        else:\n",
-    "#            plt.draw()\n",
-    "#            plt.pause(15)\n",
-    "#            plt.show()\n",
-    "#    else:\n",
-    "#        plt.draw()\n",
-    "#        plt.pause(15)\n",
-    "#        plt.show()\n",
     "    if to_file is not None:\n",
-    "        to_gif = PillowWriter(fps=10)\n",
+    "        to_gif = PillowWriter(fps=fps_gif)\n",
     "        anim.save(to_file, writer=to_gif)\n",
     "    return anim"
    ]
@@ -1175,7 +1185,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.animation.FuncAnimation at 0x7fc1d762beb0>"
+       "<matplotlib.animation.FuncAnimation at 0x7fb860e32d00>"
       ]
      },
      "execution_count": 11,
@@ -1293,7 +1303,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b50de9083f74f359116228daa9bfc2e",
+       "model_id": "39530ac1f4ae4649b1d93f0af6e52ff9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1318,8 +1328,10 @@
    ],
    "source": [
     "table = unit_hydro([1,2,1], list_outflow_uh)\n",
-    "table.plot()\n",
-    "table.sum(axis=1).plot(label='total')\n",
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(1,1,1) \n",
+    "table.plot(ax=ax)\n",
+    "table.sum(axis=1).plot(ax=ax,label='total')\n",
     "plt.legend()\n",
     "plt.xlabel('Time')\n",
     "plt.ylabel('Runoff')\n",
